@@ -1,5 +1,9 @@
 2013-09-22  Paul Smith  <psmith@gnu.org>
 
+	* implicit.c (pattern_search): After second expansion be sure to
+	handle order-only markers inside the expansion properly.
+	Fixes Savannah bug #31155.
+
 	* guile.c (guile_define_module): Technically a void* cannot
 	contain a pointer-to-function and some compilers warn about this.
 	Cast the function pointers.
